# polynomial-rootfinding-rs

./: CONTRIBUTING.md  Cargo.toml  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: grcov.yml.bak  rust.yml  tarpaulin.yml
benches/: benchmark.rs
src/: aberth.rs  aberth_ai.rs  horner.rs  lib.rs  matrix2.rs  robin.rs  rootfinding.rs  rootfinding_ai.rs  vector2.rs  vector2_ref.rs
