[package]
name = "ginger-rs"
version = "0.1.0"
edition = "2021"
description = "Parallel Bairstow Root-finding Method in Rust"
repository = "https://github.com/luk036/ginger-rs"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "ginger"
path = "src/lib.rs"

[dependencies]
num = "0.4.1"
num-traits = "0.2.18"
rayon = "1.10.0"

[dev-dependencies]
approx_eq = "0.1.8"
# lds-rs = { path = "../lds-rs"}
criterion = "0.5"

[[bench]]
name = "benchmark"
harness = false
